# HighPerfomanceCalculus

./: .#Makefile  .#launch_tests.sh  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Makefileref  Makefile~  README.md  exact_cover_omp  exact_cover_originel  gmon.out  launch_tests.sh  master_slave_test.sh  mpi_omp_test.sh  mpi_test.sh  result-full-depth-no-para.txt  result.txt
.github/workflows/: c.yml
instances/: bell12.ec  bell13.ec  bell14.ec  matching10.ec  matching8.ec  matching9.ec  pento_plus_tetra_2x4x10.ec  pento_plus_tetra_8x10.ec  pento_plus_tetra_8x8_secondary.ec  pentomino_6_10.ec  rmols10.ec
resultats/: GRID5000-CPU-INFO.txt  bell12.txt  bell12_OMP_mpi.txt  bell12_mpi.txt  bell12_ms.txt  bell12_omp.txt  bell12_seq.txt  bell13.txt  bell13_OMP_mpi.txt  bell13_mpi.txt  bell13_ms.txt  bell13_omp.txt  bell13_seq.txt  bell14_OMP_mpi.txt  bell14_mpi.txt  bell14_ms.txt  bell14_omp.txt  bell14_seq.txt  matching10_OMP_mpi.txt  matching10_mpi.txt  matching10_ms.txt  matching10_omp.txt  matching10_seq.txt  matching8_OMP_mpi.txt  matching8_mpi.txt  matching8_ms.txt  matching8_omp.txt  matching8_seq.txt  matching9_OMP_mpi.txt  matching9_mpi.txt  matching9_ms.txt  matching9_omp.txt  matching9_seq.txt
src/: .#exact_cover_omp.c  .#exact_cover_originel.c  exact_cover.c  exact_cover.nw  exact_cover_mpi.c  exact_cover_omp.c  exact_cover_omp.c~  exact_cover_originel.c
src/ver_MPI/: .#Makefile  Makefile  Makefile~  exact_cover_mpi.c
src/ver_MPI_OMP/: .#-emacsU5ulR9  Makefile  exact_cover_mpi_omp.c
src/ver_MPI_SLAVE_MASTER/: Makefile  exact_cover_mpi_slave_master  exact_cover_mpi_slave_master.c
src/ver_OMP/: .#-emacsKEaubv  Makefile  Makefile~
src/ver_seq/: .#Makefile  Makefile  Makefile~  exact_cover_originel.c
